--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+debhelper (4.2.1) unstable; urgency=low
+
+  * dh_installxfonts(1): fix link to policy. Closes: #231918
+  * dh_scrollkeeper: patch from Christian Marillat Closes: #231703
+    - Remove DTD changes since docbook-xml not supports xml catalogs.
+    - Bump scrollkeeper dep to 0.3.14-5.
+  * dh_installinfo: remove info stuff on update as well as remove.
+    Policy is unclear/wrong. Closes: #231937a
+
+ -- Joey Hess <joeyh@debian.org>  Mon,  9 Feb 2004 18:20:40 -0500
+
 debhelper (4.2.0) unstable; urgency=low
 
   * Added udeb support, as pioneered by di-packages-build. Understands
