--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (4.2.2) unstable; urgency=low
+
+  * dh_shlibdeps: Turn on for udebs. It's often wrong (and ignored by d-i),
+    but occasionally right and necessary.
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 12 Feb 2004 13:36:29 -0500
+
 debhelper (4.2.1) unstable; urgency=low
 
   * dh_installxfonts(1): fix link to policy. Closes: #231918
