--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (4.2.3) unstable; urgency=low
+
+  * dh_movefiles: use xargs -0 to safely remove files with whitespace,
+    etc. Patch from Yann Dirson. Closes: #233226
+
+ -- Joey Hess <joeyh@debian.org>  Wed, 18 Feb 2004 18:57:05 -0500
+
 debhelper (4.2.2) unstable; urgency=low
 
   * dh_shlibdeps: Turn on for udebs. It's often wrong (and ignored by d-i),
