--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (4.2.5) unstable; urgency=low
+
+  * Spanish man page updates by Ruben Possas and Rudy Godoy.
+
+ -- Joey Hess <joeyh@debian.org>  Wed, 24 Mar 2004 15:08:54 -0500
+
 debhelper (4.2.4) unstable; urgency=low
 
   * dh_installdocs: ignore .EX files as produced by dh-make.
