--- a/man/es/dh_gconf.pod
+++ b/man/es/dh_gconf.pod
@@ -1,7 +1,8 @@
 # (c) 2003 Software in the Public Interest
 # Esta traducción ha sido realizada por Rubén Porras <nahoo@inicia.es>
 # Está basada en la página de manual original:
-# versión 4.1.84 de debhelper
+# versión 1.1 del CVS de
+# /cvs/debian-doc/manpages/english/debhelper/dh_gconf.pod
 
 =head1 NOMBRE
 
