--- a/man/es/dh_installchangelogs.pod
+++ b/man/es/dh_installchangelogs.pod
@@ -1,7 +1,7 @@
 # (c) 2003 Software in the Public Interest
 # Esta traducción ha sido realizada por Rubén Porras Campo <nahoo@inicia.es>
 # Está basada en la página de manual original:
-# versión 1.2 del CVS de
+# versión 1.3 del CVS de
 # /cvs/debian-doc/manpages/english/debhelper/dh_installchangelogs.pod
 
 =head1 NOMBRE
@@ -31,7 +31,7 @@ usr/share/doc/paquete/NEWS.Debian. También pueden usarse ficheros
 debian/paquete.NEWS.
 
 Si se especifica como opción un fichero de cambios del desarrollador principal,
-y el paquete no es nativo, el fichero de cambios del desarrollador principal se
+el fichero de cambios del desarrollador principal se
 instalará en usr/share/doc/paquete/changelog en el directorio de construcción
 del paquete. Si el fichero de cambios es un fichero html (determinado por la
 extensión), se instalará en usr/share/doc/package/changelog.html, y será
@@ -56,11 +56,6 @@ documentación en el paquete hace referencia al fichero de cambios.
 Instala este fichero como el fichero de cambios del desarrollador principal.
 
 =back
-
-=head1 NOTAS
-
-Es un error especificar el fichero de cambios del desarrollador principal en un
-paquete nativo de Debian.
 
 =head1 VÉASE TAMBIÉN
 
