--- a/man/es/dh_perl.pod
+++ b/man/es/dh_perl.pod
@@ -2,7 +2,7 @@
 # Esta traducción ha sido realizada por Rudy Godoy <rudy@kernel-panik.org>
 # y revisada por Rubén Porras <nahoo@inicia.es>
 # Está basada en la página de manual original:
-# versión 1.1 del CVS de
+# versión 1.3 del CVS de
 # /cvs/debian-doc/manpages/english/debhelper/dh_perl.pod
 
 =head1 NOMBRE
@@ -34,6 +34,10 @@ lugar de todo el paquete de perl. De ser así, usted puede especificar la
 opción -d para que dh_perl genere una dependencia en el paquete base correcto.
 Esto es solamente necesario para algunos paquete que están incluidos en el
 sistema base.
+
+Note que este parámetro podría causar que no se genere ninguna dependencia
+en perl-base. perl-base es Essential, de modo que su dependencia en él se 
+puede obviar, a menos que se requiera una dependencia de versiones.
 
 =item B<-V>
 
