--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (4.2.6) unstable; urgency=low
+
+  * Bump dh_strip's recommended bintuils dep to current. Closes: #237304
+
+ -- Joey Hess <joeyh@debian.org>  Sat, 27 Mar 2004 20:04:19 -0500
+
 debhelper (4.2.5) unstable; urgency=low
 
   * Spanish man page updates by Ruben Possas and Rudy Godoy.
