--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (4.2.7) unstable; urgency=low
+
+  * Add support for cron.hourly. Closes: #240733
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 28 Mar 2004 22:14:42 -0500
+
 debhelper (4.2.6) unstable; urgency=low
 
   * Bump dh_strip's recommended bintuils dep to current. Closes: #237304
