--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (4.2.8) unstable; urgency=low
+
+  * Spanish translation of dh_installppp from Ruben Porras. Closes: #240844
+  * dh_fixperms: Make executable files in /usr/games. Closes: #243404
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 12 Apr 2004 18:31:18 -0400
+
 debhelper (4.2.7) unstable; urgency=low
 
   * Add support for cron.hourly. Closes: #240733
