--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (4.2.9) unstable; urgency=low
+
+  * dh_installinfo: escape '&' characters in INFO-DIR-SECTION when calling
+    sed. Also support \1 etc for completeness. Closes: #246301
+
+ -- Joey Hess <joeyh@debian.org>  Wed, 28 Apr 2004 14:06:16 -0400
+
 debhelper (4.2.8) unstable; urgency=low
 
   * Spanish translation of dh_installppp from Ruben Porras. Closes: #240844
