--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (4.2.10) unstable; urgency=low
+
+  * dh_strip: if an .a file is not a binary file, do not try to strip it.
+    This deals with linker scripts used on the Hurd. Closes: #246366
+
+ -- Joey Hess <joeyh@debian.org>  Wed, 28 Apr 2004 14:36:39 -0400
+
 debhelper (4.2.9) unstable; urgency=low
 
   * dh_installinfo: escape '&' characters in INFO-DIR-SECTION when calling
