--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (4.2.11) UNRELEASED; urgency=low
+
+  * dh_installmodules: Look for .ko files too. Closes: #248624
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 13 May 2004 11:25:42 -0300
+
 debhelper (4.2.10) unstable; urgency=low
 
   * dh_strip: if an .a file is not a binary file, do not try to strip it.
