--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
-debhelper (4.2.11) UNRELEASED; urgency=low
+debhelper (4.2.11) unstable; urgency=low
 
   * dh_installmodules: Look for .ko files too. Closes: #248624
+  * dh_fixperms: fix permissions of .h files. Closes: #252492
 
  -- Joey Hess <joeyh@debian.org>  Thu, 13 May 2004 11:25:42 -0300
 
