r1691:   * dh_installinit: Added --error-handler option. Based on work by Thom May.     Closes: #209090

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (4.2.12) UNRELEASED; urgency=low
+
+  * dh_installinit: Added --error-handler option. Based on work by Thom May.
+    Closes: #209090
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 28 Jun 2004 19:49:15 -0400
+
 debhelper (4.2.11) unstable; urgency=low
 
   * dh_installmodules: Look for .ko files too. Closes: #248624
