--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (4.2.12) UNRELEASED; urgency=low
+debhelper (4.2.12) unstable; urgency=low
 
   * dh_installinit: Added --error-handler option. Based on work by Thom May.
     Closes: #209090
