r1694:   * Spanish man page updates from Ruben Porras. Closes: #247382

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (4.2.13) UNRELEASED; urgency=low
+
+  * Spanish man page updates from Ruben Porras. Closes: #247382
+
+ -- Joey Hess <joeyh@debian.org>  Tue,  6 Jul 2004 12:52:30 -0400
+
 debhelper (4.2.12) unstable; urgency=low
 
   * dh_installinit: Added --error-handler option. Based on work by Thom May.
