--- a/man/es/dh_installmodules.pod
+++ b/man/es/dh_installmodules.pod
@@ -1,7 +1,7 @@
 # (c) 2003 Software in the Public Interest
 # Esta traducción ha sido realizada por Rubén Porras Campo <nahoo@inicia.es>
 # Está basada en la página de manual original:
-# versión 1.2 del CVS de
+# versión 1.3 del CVS de
 # /cvs/debian-doc/manpages/english/debhelper/dh_installmodules.pod
 
 =head1 NOMBRE
@@ -24,8 +24,8 @@ en el directorio de construcción del paquete.
 Las órdenes de postinst y postrm necesarias se generan automáticamente para
 registrar los módulos cuando se instale el paquete. Lea L<dh_installdeb(1)> para
 una explicación acerca de como funciona esto. Dese cuenta de que esto se
-realizará para todos los paquetes sobre los que actúe este programa que tenga el
-fichero arriba mencionado, o tenga fichero .o en /lib/modules.
+realizará para todos los paquetes sobre los que actúe este programa que tengan el
+fichero arriba mencionado, o tengan ficheros .o o .ko en /lib/modules.
 
 =head1 OPCIONES
 
