--- a/doc/TODO
+++ b/doc/TODO
@@ -52,8 +52,7 @@ Deprecated:
   some of them. I'd also like to deprecate/remove debian/compress files, -X is
   a better idea.
 * dh_suidregister. Once nothing in the archive uses it.
-* dh_installmanpages. Only mildly deprecated right now. Once dh_installman
-  catches on, make it emit a warning, and then wait for it to go away.
+* dh_installmanpages.
 * dh_testversion. Remove as soon as nothing uses it.
 * dh_movefiles. I won't hold my breath.
 * debconf-mergetemplates support and the debian/template.ll files and the
