--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (4.2.13) UNRELEASED; urgency=low
+debhelper (4.2.13) unstable; urgency=low
 
   * Spanish man page updates from Ruben Porras. Closes: #247382
   * dh_gconf: gconf schemas moved to /usr/share/gconf/schemas. Relocate
@@ -23,6 +23,7 @@ debhelper (4.2.13) UNRELEASED; urgency=low
     in the others, and added a few new tests.
   * dh_link: applied GOTO Masanori's patch to fix conversion of existing
     relative symlinks between top level directories. Closes: #244157
+  * Warn if debian/compat is empty.
 
  -- Joey Hess <joeyh@debian.org>  Tue,  6 Jul 2004 12:52:30 -0400
 
