--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (4.2.14) unstable; urgency=low
+
+  * Make dh_gconf postinst more portable.
+  * Strip spoch when generating udeb filenames. Closes: #258864
+
+ -- Joey Hess <joeyh@debian.org>  Sat, 10 Jul 2004 11:15:34 -0400
+
 debhelper (4.2.13) unstable; urgency=low
 
   * Spanish man page updates from Ruben Porras. Closes: #247382
