--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (4.2.15) unstable; urgency=low
+
+  * dh_cgonf: deal with problems if /etc/gconf/schemas doesn't exist any more
+    (#258901)
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 12 Jul 2004 11:52:45 -0400
+
 debhelper (4.2.14) unstable; urgency=low
 
   * Make dh_gconf postinst more portable.
