--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,12 @@
+debhelper (4.2.16) unstable; urgency=low
+
+  * dh_gconf: fix glob escaping in find for schemas. Closes: #260488
+
+ -- Joey Hess <joeyh@debian.org>  Tue, 20 Jul 2004 17:20:21 -0400
+
 debhelper (4.2.15) unstable; urgency=low
 
-  * dh_cgonf: deal with problems if /etc/gconf/schemas doesn't exist any more
+  * dh_gconf: deal with problems if /etc/gconf/schemas doesn't exist any more
     (#258901)
 
  -- Joey Hess <joeyh@debian.org>  Mon, 12 Jul 2004 11:52:45 -0400
