--- a/man/es/dh_fixperms.pod
+++ b/man/es/dh_fixperms.pod
@@ -1,7 +1,7 @@
 # (c) 2003 Software in the Public Interest
 # Esta traducción ha sido realizada por Rubén Porras Campo <nahoo@inicia.es>
 # Está basada en la página de manual original:
-# versión 1.1 del CVS de
+# versión 1.3 del CVS de
 # /cvs/debian-doc/manpages/english/debhelper/dh_fixperms.pod
 
 =head1 NOMBRE
@@ -24,9 +24,9 @@ directorio de construcción del paquete (excluyendo los ficheros en el directorio
 examples/) se 644. También cambia el modo de las páginas del manual a 644. Hace
 que todos los ficheros pertenezcan al superusuario y elimina los permisos de
 escritura del grupo y de otros. Elimina los permisos de ejecución de cualquier
-biblioteca. Hace ejecutables todos los ficheros en bin/ y en etc/init.d (sólo
-v4). Finalmente, finalmente elimina los bit setuid y setgid de todos los
-ficheros en el paquete.
+biblioteca. Hace ejecutables todos los ficheros en bin/, /usr/games/ y en
+etc/init.d (sólo v4). Finalmente, finalmente elimina los bit setuid y setgid de
+todos los ficheros en el paquete.
 
 =head1 OPCIONES
 
