--- a/man/es/dh_gconf.pod
+++ b/man/es/dh_gconf.pod
@@ -1,7 +1,7 @@
 # (c) 2003 Software in the Public Interest
 # Esta traducción ha sido realizada por Rubén Porras <nahoo@inicia.es>
 # Está basada en la página de manual original:
-# versión 1.1 del CVS de
+# versión 1.2 del CVS de
 # /cvs/debian-doc/manpages/english/debhelper/dh_gconf.pod
 
 =head1 NOMBRE
@@ -24,7 +24,8 @@ etc/gconf/schemas. Estos fragmentos usarán gconftool-2, así que el paquete
 deberá depender de gconf2. Este programa añadirá una dependencia a
 ${misc:Depends}.
 
-=cut
+El script de postinst además enviará una señal a gconfd-2 de forma que los
+esquemas instalados estén disponibles inmediatamente.
 
 =head1 VÉASE TAMBIÉN
 
