--- a/man/es/dh_installcron.pod
+++ b/man/es/dh_installcron.pod
@@ -1,7 +1,7 @@
 # (c) 2003 Software in the Public Interest
 # Esta traducción ha sido realizada por Rubén Porras Campo <nahoo@inicia.es>
 # Está basada en la página de manual original:
-# versión 1.2 del CVS de
+# versión 1.3 del CVS de
 # /cvs/debian-doc/manpages/english/debhelper/dh_installcron.pod
 
 =head1 NOMBRE
@@ -17,7 +17,7 @@ B<dh_installcron> [S<B<opciones debhelper>>] [B<--name=>I<nombre>]
 dh_installcron es un programa de debhelper responsable de instalar scripts para
 cron en etc/cron.*/ en los directorios de construcción del paquete. Se instalan
 los ficheros debian/paquete.cron.daily, debian/paquete.cron.weekly,
-debian/paquete.cron.monthly, y debian/paquete.cron.d.
+debian/paquete.cron.monthly, debian/paquete.cron.hourly, y debian/paquete.cron.d.
 
 =head1 OPCIONES
 
