--- a/man/es/dh_installmanpages.pod
+++ b/man/es/dh_installmanpages.pod
@@ -1,7 +1,7 @@
 # (c) 2003 Software in the Public Interest
 # Esta traducción ha sido realizada por Rubén Porras Campo <nahoo@inicia.es>
 # Está basada en la página de manual original:
-# versión 1.1 del CVS de
+# versión 1.2 del CVS de
 # /cvs/debian-doc/manpages/english/debhelper/dh_installmanpages.pod
 
 =head1 NOMBRE
@@ -20,7 +20,8 @@ los directorios de construcción del paquete.
 
 Este es un programa de estilo DWIM (N.T: Del inglés "Do what I mean", es decir,
 haz lo que quiero), con una interfaz diferente del resto de los programas de
-debhelper. Se recomienda el uso de L<dh_installman(1)> en su lugar.
+debhelper. Se desaprueba su uso, en su lugar se recomienda el uso de
+L<dh_installman(1)>.
 
 dh_installmanpages analiza el directorio actual y sus subdirectorios en busca de
 nombres de ficheros que parezcan aptos para páginas del manual. (Dese cuenta de
