--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (4.2.17) unstable; urgency=low
+
+  * Spanish man page updates from Ruben Porras. Closes: #261516
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 26 Jul 2004 21:41:37 -0400
+
 debhelper (4.2.16) unstable; urgency=low
 
   * dh_gconf: fix glob escaping in find for schemas. Closes: #260488
