--- a/man/es/dh_scrollkeeper.pod
+++ b/man/es/dh_scrollkeeper.pod
@@ -2,7 +2,7 @@
 # Esta traducción ha sido realizada por Rudy Godoy <rudy@kernel-panik.org>
 # y revisada por Rubén Porras <nahoo@inicia.es>
 # Está basada en la página de manual original:
-# versión 1.1 del CVS de
+# versión 1.2 del CVS de
 # /cvs/debian-doc/manpages/english/debhelper/dh_scrollkeeper.pod
 
 =head1 NOMBRE
@@ -21,9 +21,7 @@ de paquetes y que usan ScrollKeeper.
 
 Esta orden añade automáticamente partes del programa de desarrollador para
 registro y de-registro de ficheros con ScrollKeeper (a menos que se use la
-opción B<-n>). Se añadirá una dependencia en scrollkeeper a
-C<${misc:Depends}>, así que asegúrese que su paquete use esta variable en
-F<debian/control>. Vea L<dh_installdeb(1)> para explicación sobre las partes del
+opción B<-n>). Vea L<dh_installdeb(1)> para explicación sobre las partes del
 programa Debhelper de desarrollador.
 
 También cambiará cualquier declaración DTD en los ficheros OMF y DocBook que
