--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (4.2.18) UNRELEASED; urgency=low
+
+  * Add dh_shlibdeps see also. Closes: #261367
+
+ -- Joey Hess <joeyh@debian.org>  Fri, 30 Jul 2004 16:50:01 -0400
+
 debhelper (4.2.17) unstable; urgency=low
 
   * Spanish man page updates from Ruben Porras. Closes: #261516
