--- a/debhelper.pod
+++ b/debhelper.pod
@@ -108,7 +108,7 @@ for the package, the package should not be acted on on other architectures. So
 this flag makes the command act on all "Architecture: any" packages, as well
 as on any packages that have the current architecture explicitly specified.
 Contrast to the -a flag, which makes the command work on all packages that
-are not architecture independant.
+are not architecture independent.
 
 =item B<-N>I<package>, B<--no-package=>I<package>
 
