--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
-debhelper (4.2.18) UNRELEASED; urgency=low
+debhelper (4.2.18) unstable; urgency=low
 
-  * Add dh_shlibdeps see also. Closes: #261367
+  * Add dh_shlibdeps see also. Closes: #261367a
+  * Update dh_gconf man page for new schema location. Closes: #264378a
+  * debhelper.7 man page typo fix. Closes: #265603
 
- -- Joey Hess <joeyh@debian.org>  Fri, 30 Jul 2004 16:50:01 -0400
+ -- Joey Hess <joeyh@debian.org>  Fri, 13 Aug 2004 19:16:51 -0300
 
 debhelper (4.2.17) unstable; urgency=low
 
