--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (4.2.19) unstable; urgency=HIGH
+
+  * Conflict with dpkg-cross since it breaks dh_strip.
+
+ -- Joey Hess <joeyh@debian.org>  Fri, 13 Aug 2004 21:50:12 -0300
+
 debhelper (4.2.18) unstable; urgency=low
 
   * Add dh_shlibdeps see also. Closes: #261367a
