r1715:   * dpkg-cross is fixed in unstable, version the conflict. Closes: #265777   * Complete Spanish translation of all man pages thanks to RubÃ©n Porras

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (4.2.20) unstable; urgency=HIGH
+
+  * dpkg-cross is fixed in unstable, version the conflict. Closes: #265777
+
+ -- Joey Hess <joeyh@debian.org>  Wed, 25 Aug 2004 08:05:42 -0400
+
 debhelper (4.2.19) unstable; urgency=HIGH
 
   * Conflict with dpkg-cross since it breaks dh_strip.
@@ -334,7 +340,7 @@ debhelper (4.1.71) unstable; urgency=low
 
 debhelper (4.1.70) unstable; urgency=low
 
-  * Complete Spanish translation of all man pages thanks to Rubén Porras
+  * Complete Spanish translation of all man pages thanks to RubÃ©n Porras
     Campo, Rudy Godoy, and the rest of the Spanish translation team.
     Closes: #199261
 
