--- a/debhelper.pod
+++ b/debhelper.pod
@@ -145,7 +145,7 @@ Do not modify postinst/postrm/etc scripts.
 Exclude an item from processing. This option may be used multiple times,
 to exclude more than one thing.
 
-=item B<-A>, B<-all>
+=item B<-A>, B<--all>
 
 Makes files or other items that are specified on the command line take effect
 in ALL packages acted on, not just the first.
