--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (4.2.21) unstable; urgency=low
+
+  * Add dh_desktop, from Ross Burton. Closes: #275454
+
+ -- Joey Hess <joeyh@debian.org>  Tue, 12 Oct 2004 14:31:07 -0400
+
 debhelper (4.2.20) unstable; urgency=HIGH
 
   * dpkg-cross is fixed in unstable, version the conflict. Closes: #265777
