--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+debhelper (4.2.22) unstable; urgency=low
+
+  * dh_desktop Spanish man page from Ruben Porras.
+  * dh_desktop: reindent
+  * dh_desktop: only register files in /usr/share/applications
+    with update-desktop-database. Closes: #278353
+
+ -- Joey Hess <joeyh@debian.org>  Sat, 16 Oct 2004 13:42:29 -0400
+
 debhelper (4.2.21) unstable; urgency=low
 
   * Add dh_desktop, from Ross Burton. Closes: #275454
