--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (4.2.23) unstable; urgency=low
+
+  * Fix typo introduced last release. Closes: #278727
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 28 Oct 2004 20:51:05 -0400
+
 debhelper (4.2.22) unstable; urgency=low
 
   * dh_desktop Spanish man page from Ruben Porras.
