r1723:   * Spanish man page updates.

--- a/man/es/debhelper.pod
+++ b/man/es/debhelper.pod
@@ -3,7 +3,7 @@
 # y revisada por Javier Fernández-Sanguino <jfs@computer.org>,
 # Santiago Vila <sanvila@unex.es> y Esteban Manchado <zoso@demiurgo.org>
 # Está basada en la página de manual original:
-# versión 1.7 del CVS de
+# versión 1.9 del CVS de
 # /cvs/debian-doc/manpages/english/debhelper/debhelper.pod
 
 =head1 NOMBRE
@@ -157,7 +157,7 @@ No modificar los scripts postinst/postrm/etc.
 No procesar un elemento. Esta opción puede ser usada varias
 veces, para excluir distintos elementos.
 
-=item B<-A>, B<-all>
+=item B<-A>, B<--all>
 
 Hace que los archivos o elementos especificados en la línea de órdenes tengan
 efecto en TODOS los paquetes sobre los que actúa, no sólo el primero.
