--- a/man/es/dh_gconf.pod
+++ b/man/es/dh_gconf.pod
@@ -1,7 +1,7 @@
 # (c) 2003 Software in the Public Interest
 # Esta traducción ha sido realizada por Rubén Porras <nahoo@inicia.es>
 # Está basada en la página de manual original:
-# versión 1.2 del CVS de
+# versión 1.3 del CVS de
 # /cvs/debian-doc/manpages/english/debhelper/dh_gconf.pod
 
 =head1 NOMBRE
@@ -20,7 +20,7 @@ dh_gconf es un programa de debhelper que registra esquemas de GConf.
 
 Genera automáticamente los fragmentos en los scripts de postinst y prerm
 necesarios para registrar y des-registrar los esquemas en
-etc/gconf/schemas. Estos fragmentos usarán gconftool-2, así que el paquete
+usr/share/gconf/schemas. Estos fragmentos usarán gconftool-2, así que el paquete
 deberá depender de gconf2. Este programa añadirá una dependencia a
 ${misc:Depends}.
 
