--- a/man/es/dh_shlibdeps.pod
+++ b/man/es/dh_shlibdeps.pod
@@ -2,7 +2,7 @@
 # Esta traducción ha sido realizada por Rudy Godoy <rudy@kernel-panik.org>
 # y revisada por Rubén Porras <nahoo@inicia.es>
 # Está basada en la página de manual original:
-# versión 1.1 del CVS de
+# versión 1.2 del CVS de
 # /cvs/debian-doc/manpages/english/debhelper/dh_shlibdeps.pod
 
 =head1 NOMBRE
@@ -77,7 +77,7 @@ bibliotecas compartidas.
 
 =head1 VÉASE TAMBIÉN
 
-L<debhelper(7)>
+L<debhelper(7)>, L<dpkg-shlibdeps(1)>
 
 Este programa es parte de debhelper.
 
