--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (4.2.24) UNRELEASED; urgency=low
+
+  * Spanish man page updates.
+
+ -- Joey Hess <joeyh@debian.org>  Sat, 30 Oct 2004 18:52:00 -0400
+
 debhelper (4.2.23) unstable; urgency=low
 
   * Fix typo introduced last release. Closes: #278727
