--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
-debhelper (4.2.24) UNRELEASED; urgency=low
+debhelper (4.2.24) unstable; urgency=low
 
   * Spanish man page updates.
+  * Improve the documentation of dh_makeshlibs behavior in v4 mode.
+    Closes: #280676
 
  -- Joey Hess <joeyh@debian.org>  Sat, 30 Oct 2004 18:52:00 -0400
 
