--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (4.2.25) unstable; urgency=low
+
+  * dh_shlibdeps: Only set LD_LIBRARY_PATH when calling dpkg-shlibdeps.
+    Closes: #283413
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 29 Nov 2004 13:21:05 -0500
+
 debhelper (4.2.24) unstable; urgency=low
 
   * Spanish man page updates.
