--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+debhelper (4.2.26) unstable; urgency=low
+
+  * dh_makeshlibs spanish translation update
+  * Add example to dh_installdocs man page. Closes: #283857
+  * Clarify dh_python's documentation of -V and error if the version is
+    unknown. Closes: #282924
+
+ -- Joey Hess <joeyh@debian.org>  Wed,  8 Dec 2004 14:44:44 -0500
+
 debhelper (4.2.25) unstable; urgency=low
 
   * dh_shlibdeps: Only set LD_LIBRARY_PATH when calling dpkg-shlibdeps.
