--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (4.2.27) unstable; urgency=low
+
+  * dh_desktop: Fix underescaping of *.desktop in call to find.
+    Closes: #284832
+
+ -- Joey Hess <joeyh@debian.org>  Thu,  9 Dec 2004 14:32:41 -0500
+
 debhelper (4.2.26) unstable; urgency=low
 
   * dh_makeshlibs spanish translation update
