--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (4.2.28) unstable; urgency=low
+
+  * dh_python: Add 2.4 to python_allversions. Closes: #285608
+
+ -- Joey Hess <joeyh@debian.org>  Tue, 14 Dec 2004 13:08:56 -0500
+
 debhelper (4.2.27) unstable; urgency=low
 
   * dh_desktop: Fix underescaping of *.desktop in call to find.
