r1734:   * dh_installdocs Spanish manpage update

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (4.2.29) UNRELEASED; urgency=low
+
+  * dh_installdocs Spanish manpage update
+
+ -- Joey Hess <joeyh@debian.org>  Wed, 15 Dec 2004 08:53:37 -0500
+
 debhelper (4.2.28) unstable; urgency=low
 
   * dh_python: Add 2.4 to python_allversions. Closes: #285608
