--- a/man/es/dh_installdocs.pod
+++ b/man/es/dh_installdocs.pod
@@ -1,7 +1,7 @@
 # (c) 2003 Software in the Public Interest
 # Esta traducción ha sido realizada por Rubén Porras Campo <nahoo@inicia.es>
 # Está basada en la página de manual original:
-# versión 1.1 del CVS de
+# versión 1.2 del CVS de
 # /cvs/debian-doc/manpages/english/debhelper/dh_installdocs.pod
 
 =head1 NOMBRE
@@ -71,6 +71,17 @@ Instala esos ficheros como documentación en el primer paquete sobre el que
 actúe. (O en todos si se especifica B<-A>).
 
 =back
+
+=head1 EJEMPLOS
+
+A continuación se muestra un ejemplo de un fichero debian/paquete.docs:
+
+  README
+  TODO
+  debian/notes-for-maintainers.txt
+  docs/manual.txt
+  docs/manual.pdf
+  docs/manual-html/
 
 =head1 NOTAS
 
