--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,9 @@
-debhelper (4.2.29) UNRELEASED; urgency=low
+debhelper (4.2.29) unstable; urgency=low
 
   * dh_installdocs Spanish manpage update
+  * dh_installlogcheck: change permissions of logcheck rulefules from 600 to
+    644, at request of logcheck maintainer. Closes: #288357
+  * dh_installlogcheck: fix indentation
 
  -- Joey Hess <joeyh@debian.org>  Wed, 15 Dec 2004 08:53:37 -0500
 
