--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+debhelper (4.2.30) unstable; urgency=low
+
+  * dh_installmime: Patch from Loïc Minier to add support for instlaling
+    "sharedmimeinfo" files and calling update-mime-database. Closes: #255719
+  * Modified patch to not hardcode pathnames.
+  * Modified other autoscripts so there are no hardcoded pathnames at all
+    any more.
+
+ -- Joey Hess <joeyh@debian.org>  Tue,  4 Jan 2005 18:44:11 -0500
+
 debhelper (4.2.29) unstable; urgency=low
 
   * dh_installdocs Spanish manpage update
