r1739:   * Updated dh_installmime Spanish translation.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (4.2.31) UNRELEASED; urgency=low
+
+  * Updated dh_installmime Spanish translation.
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 20 Jan 2005 15:22:55 -0500
+
 debhelper (4.2.30) unstable; urgency=low
 
   * dh_installmime: Patch from Loïc Minier to add support for instlaling
